e2e/networking/headless-service/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
status:
  readyReplicas: 2
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
spec:
  clusterIP: None
