e2e/networking/headless-service/01-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
collectors:
  - type: events
    namespace: $NAMESPACE
commands:
  - script: |
      set -e
      addr_count=$(kubectl get endpoints nginx-headless -n $NAMESPACE -o jsonpath='{.subsets[0].addresses[*].ip}' | wc -w)
      test "$addr_count" -eq 2
